--- a/shop.html
+++ b/shop.html
@@ -6,25 +6,24 @@
     <!-- Meta -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Web Shop">
+    <meta name="description" content="Design &amp; Develeopment">
     <meta name="author" content="Joseph Taylor">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="img/favicon.ico"/>
 
     <!-- Fonts -->
 
-    <script src="//use.typekit.net/dyy1prm.js"></script>
-    <script>try{Typekit.load();}catch(e){}</script>
-      
     <!-- CSS -->
 
     <link rel="stylesheet" href="css/IE.css">
-    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/RESET.css">
     <link rel="stylesheet" href="css/Master-Styles.css">
 
     <!-- Scripts -->
-    
+    <script>try{Typekit.load();}catch(e){}</script>
+     <script src="//use.typekit.net/dyy1prm.js"></script>
+
 
   </head>
   <body>
