--- a/shop-item.html
+++ b/shop-item.html
@@ -17,12 +17,12 @@
     <!-- CSS -->
 
     <link rel="stylesheet" href="css/IE.css">
-    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/RESET.css">
     <link rel="stylesheet" href="css/Master-Styles.css">
 
     <!-- Scripts -->
-    <script src="//use.typekit.net/dyy1prm.js"></script>
     <script>try{Typekit.load();}catch(e){}</script>
+     <script src="//use.typekit.net/dyy1prm.js"></script>
 
 
   </head>
