hold on live domain.

--- a/index.html
+++ b/index.html
@@ -28,106 +28,7 @@
   </head>
   <body>
 
-    <!-- Nav -->
-    <div id="Nav">
-      <div class="nav-hed group">
-        <ul>
-          <li><h1><a href="index.html">Black Moods</a></h1></li>
-          <!--<li><h3>черный лад</h3></li>-->
-        </ul>
-      </div>
-      <div id="NavMenu" class="nav-links group">
-        <label class="show-menu" for="show-menu">
-          Menu
-        </label>
-        <input id="show-menu" type="checkbox" role="button"></input>
-        <ul id="menu">
-          <li><a href="work.html">Work</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li><a href="shop.html">Shop</a></li>
-          <li><a href="info.html">Info</a></li>
-        </ul>
-      </div>
-    </div>
-
-    <!-- Hed -->
-    <div class="Hed-img group">
-        <span></span>
-    </div>
-
-    <!-- SideBar-Left -->
-    <div id="SideBar">
-      <div class="MoodsBar group">
-        <p>blackmoodsyellowmoodscyanmoodsmagentamoodsblackmoodsyellowmoodscyanmoodsmagentamoodsblackmoodsyellowmoodscyanmoodsmagentamoodsblackmoodsyellowmoodscyanmoodsmagentamoodsblackmoodsyellowmoodscyanmoodsmagentamoodsblackmoodsyellowmoodscyanmoodsmagentamoodsblackmoodsyellowmoodscyanmoodsmagentamoods</p>
-      </div>
-    </div>
-
-    <!-- Main Content -->
-    <div id="MC-item" class="group">
-      <div class="MC-item-img">
-        <img src="">
-      </div>
-      <div class="MC-item-post group">
-        <h4>Entry Header</h4>
-        <h3>Entry Sub-Header</h3>
-        <p>lkjasdofingoinaoidfj lakdfsklj lasdi aliline liagihel;ak’j  a;ing’iange  c’ameion aklvmeia;wej lkjasdofingoinaoidfj lakdfsklj lasdi aliline liagihel;ak’j  a;ing’iange  c’ameion aklvmeia;wej lkjasdofingoinaoidfj lakdfsklj lasdi aliline liagihel;ak’j  a;ing’iange  c’ameion aklvmeia;wej lkjasdofingoinaoidfj lakdfsklj lasdi aliline liagihel;ak’j  a;ing’iange  c’ameion aklvmeia;wej lkjasdofingoinaoidfj</p>
-      </div>
-    </div>
-    
-    <!-- SideBar-Right -->
-    <div id="SideBar-Right">
-      <div class="time-date group">
-        <ul>
-          <li class="time">Time<p>xx:xx</p></li>
-          <li class="date">Date<p>Mo/Dy/Year</p></li>
-        </ul>
-      </div>
-      <div class="Web-links">
-        <h4>Links</h4>
-        <ul>
-          <li><a href="">check please</a></li>
-        </ul>
-      </div>
-    </div>
-
-    <!-- Footer -->
-    <div id="Foot" class="group">
-      <div class="foot-top">
-        <div class="foot-page-links">
-          <ul>
-            <li><a href="index.html">Home</a></li>  
-            <li><a href="work.html">Work</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="shop.html">Shop</a></li>
-            <li><a href="info.html">Info</a></li>
-          </ul>
-        </div>
-        <div class="foot-email">
-          <form>
-            <field>your@email.com</field>
-            <button>Sign Up</button>
-          </form>
-        </div>
-      </div>
-      <div class="foot-bottom">
-        <div class="foot-social">
-          <ul>
-            <li><a href="">GitHub</a></li>
-            <li><a href="">LinkdIn</a></li>
-            <li><a href="">Instagram</a></li>
-          </ul>
-          <p><a href=""></a></p>
-        </div>
-        <div class="foot-rights">
-          <h4 class="foot-copyright">C. 2014 Black-Moods.com</h4>
-          <ul>
-            <li><a href="">Privacy</a></li>
-            <li><a href="">Terms &amp; Conditions</a></li>
-            <li><a href="">Wholesale</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
+    <h1 class="bigName">Black Moods</h1>
 
   </body>
 </html>
