blog page styles

--- a/blog.html
+++ b/blog.html
@@ -50,21 +50,6 @@
       </div>
     </div>
 
-    <!-- Sub-Nav -->
-    <div id="Sub-Nav">
-      <!--<div class="wordDay">
-        <h2 id="word">Word</h2>
-        <p id="def"><span id="pron-pos">Pronunciation - Pos</span>definition</p>
-      </div>-->
-      <div id="NavMenu" class="sub-nav group">
-        <ul id="">
-          <li id="Brand"><a href="#">Tech</a></li>
-          <li id="Web"><a href="#">Love</a></li>
-          <li id="Print"><a href="#">Life</a></li>
-        </ul>
-      </div>
-    </div>
-
     <!-- SideBar-Left -->
     <div id="SideBar">
       <div class="MoodsBar">
@@ -83,8 +68,32 @@
       </div>
     </div>
 
+    <!-- Sub-Nav -->
+    <div id="Sub-Nav">
+      <div id="wordDay">
+        <h2 class="word">Dictionary<span id="pron-pos"> | dikSHe,nere | n:</span></h2>
+        <p class="wordDef">a book or electronic resource that lists the words of a language.”I’ll look up love in the dictionary”</p>
+      </div>
+      <div id="subNavMenu" class="sub-nav group">
+        <ul id="">
+          <li id="Brand"><a href="#">Tech</a></li>
+          <li id="Web"><a href="#">Love</a></li>
+          <li id="Print"><a href="#">Life</a></li>
+        </ul>
+      </div>
+    </div>
+    
+    
     <!-- Main Content -->
     <div id="Blog-feed">
+      <div class="feed-article">
+        <div style="height:150px; width: 100%; background-color: blue;">
+            <img class="circle">  
+        </div>
+        <h4>Blog Post Section</h4>
+        <h3>Blog Post Title</h3>
+        <p>lkjadlfkaosdoav lasjdha kavoihoehf avn;oaheha; an;oiah;oiaj.rskng;ah;aoi vav;oiva;inv; aihv;oaihr;oiaug;lakrna vrn;aoih;i;sn;snbalknfjkvbkxbc iuahe askla;oivha;irha nrvakle’aisrg ioasrnbarka/lhfaisnvakln.</p>
+      </div>
       <div class="feed-article">
         <div style="height:150px; width: 100%; background-color: blue;">
             <img class="circle">  
