--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
   </head>
   <body>
 
-    <h1 class="bigName">Black Moods</h1>
-    <h3></h3>
+    <h1 class="bigName">Black Moods<br><span>sounds like singing a song</span></h1>
 
   </body>
 </html>
