blog and work landing page style

--- a/blog.html
+++ b/blog.html
@@ -76,9 +76,9 @@
       </div>
       <div id="subNavMenu" class="sub-nav group">
         <ul id="">
-          <li id="Brand"><a href="#">Tech</a></li>
-          <li id="Web"><a href="#">Love</a></li>
-          <li id="Print"><a href="#">Life</a></li>
+          <li id="Tech"><a href="#">Tech</a></li>
+          <li id="Love"><a href="#">Love</a></li>
+          <li id="Life"><a href="#">Life</a></li>
         </ul>
       </div>
     </div>
@@ -87,20 +87,24 @@
     <!-- Main Content -->
     <div id="Blog-feed">
       <div class="feed-article">
-        <div style="height:150px; width: 100%; background-color: blue;">
-            <img class="circle">  
+        <div class="feedImg">
+            <img>  
         </div>
-        <h4>Blog Post Section</h4>
-        <h3>Blog Post Title</h3>
-        <p>lkjadlfkaosdoav lasjdha kavoihoehf avn;oaheha; an;oiah;oiaj.rskng;ah;aoi vav;oiva;inv; aihv;oaihr;oiaug;lakrna vrn;aoih;i;sn;snbalknfjkvbkxbc iuahe askla;oivha;irha nrvakle’aisrg ioasrnbarka/lhfaisnvakln.</p>
+        <div class="feedCopy">
+            <h4>Blog Post Section</h4>
+            <h3>Blog Post Title</h3>
+            <p>lkjadlfkaosdoav lasjdha kavoihoehf avn;oaheha; an;oiah;oiaj.rskng;ah;aoi vav;oiva;inv; aihv;oaihr;oiaug;lakrna vrn;aoih;i;sn;snbalknfjkvbkxbc iuahe askla;oivha;irha nrvakle’aisrg ioasrnbarka/lhfaisnvakln.</p>
+        </div>
       </div>
       <div class="feed-article">
-        <div style="height:150px; width: 100%; background-color: blue;">
-            <img class="circle">  
+        <div class="feedImg">
+            <img>  
         </div>
-        <h4>Blog Post Section</h4>
-        <h3>Blog Post Title</h3>
-        <p>lkjadlfkaosdoav lasjdha kavoihoehf avn;oaheha; an;oiah;oiaj.rskng;ah;aoi vav;oiva;inv; aihv;oaihr;oiaug;lakrna vrn;aoih;i;sn;snbalknfjkvbkxbc iuahe askla;oivha;irha nrvakle’aisrg ioasrnbarka/lhfaisnvakln.</p>
+        <div class="feedCopy">
+            <h4>Blog Post Section</h4>
+            <h3>Blog Post Title</h3>
+            <p>lkjadlfkaosdoav lasjdha kavoihoehf avn;oaheha; an;oiah;oiaj.rskng;ah;aoi vav;oiva;inv; aihv;oaihr;oiaug;lakrna vrn;aoih;i;sn;snbalknfjkvbkxbc iuahe askla;oivha;irha nrvakle’aisrg ioasrnbarka/lhfaisnvakln.</p>
+        </div>
       </div>
     </div>
 
