--- a/work.html
+++ b/work.html
@@ -50,15 +50,6 @@
       </div>
     </div>
 
-    <!-- Sub-Nav -->
-    <div id="Sub-Nav">
-      <ul>
-        <li id="Brand">Brand</li>
-        <li id="Web">Web</li>
-        <li id="Print">Print</li>
-      </ul>
-    </div>
-
     <!-- SideBar-Left -->
     <div id="SideBar">
       <div class="MoodsBar">
@@ -71,14 +62,32 @@
         </ul>
       </div>
     </div>
+    
+    <!-- Sub-Nav -->
+    <div id="Sub-Nav">
+      <div id="subNavMenu" class="sub-nav group">
+          <ul>
+            <li id="Brand"><a href="#">Brand</a></li>
+            <li id="Web"><a href="#">Web</a></li>
+            <li id="Print"><a href="#">Print</a></li>
+          </ul>
+      </div>
+    </div>
 
     <!-- Main Content -->
     <div id="Work">
-      <div id="" class="work-items">
+<ul>
+      <li><div id="" class="work-items">
         <h4>Item</h4>
         <a href=""><img src=""></a>
         <p>Short description and other info that might be useful or not... Its up to you to get what you need.<a href="">See More</a></p>
-      </div>
+      </div></li>
+      <li><div id="" class="work-items">
+        <h4>Item</h4>
+        <a href=""><img src=""></a>
+        <p>Short description and other info that might be useful or not... Its up to you to get what you need.<a href="">See More</a></p>
+      </div></li>
+</ul>
     </div>
 
     <!-- Footer -->
