new item images

--- a/shop.html
+++ b/shop.html
@@ -66,7 +66,7 @@
     <!-- MainContent -->
     <div id="shop">
       <div class="shop-item-left group">
-        <a href="shop-item.html"><img class="circle" src=""><p>Item Name</p></a>
+        <a href="shop-item.html"><img class="circle" src="./img/ice-cream-1"><p>Chocolate Chip Cone</p></a>
       </div>
       <div class="shop-item-right group">
         <a href=""><img class="circle" src=""><p>Item Name</p></a>
