general updates - responsive and structure changes

--- a/index.html
+++ b/index.html
@@ -20,10 +20,17 @@
     <link rel="stylesheet" href="css/RESET.css">
     <link rel="stylesheet" href="css/Master-Styles.css">
 
-    <!-- Scripts -->
+    <!-- JS -->
+    
+    <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="js/function.js"></script>
+      
+    <!-- Fonts -->
     <script>try{Typekit.load();}catch(e){}</script>
-     <script src="//use.typekit.net/dyy1prm.js"></script>
+    <script src="//use.typekit.net/dyy1prm.js"></script>
 
+    <!-- Scripts -->
 
   </head>
   <body>
@@ -40,7 +47,7 @@
         <label class="show-menu" for="show-menu">
           Menu
         </label>
-        <input id="show-menu" type="checkbox" role="button"></input>
+        <input id="show-menu" type="checkbox" role="button">
         <ul id="menu">
           <li><a href="work.html">Work</a></li>
           <li><a href="blog.html">Blog</a></li>
