--- a/shop.html
+++ b/shop.html
@@ -20,10 +20,17 @@
     <link rel="stylesheet" href="css/RESET.css">
     <link rel="stylesheet" href="css/Master-Styles.css">
 
-    <!-- Scripts -->
+    <!-- JS -->
+    
+    <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="js/function.js"></script>
+      
+    <!-- Fonts -->
     <script>try{Typekit.load();}catch(e){}</script>
-     <script src="//use.typekit.net/dyy1prm.js"></script>
+    <script src="//use.typekit.net/dyy1prm.js"></script>
 
+    <!-- Scripts -->
 
   </head>
   <body>
@@ -65,9 +72,11 @@
 
     <!-- MainContent -->
     <div id="shop">
-      <div class="shop-item-left group">
-        <a href="shop-item.html"><img class="circle" src="./img/ice-cream-1"><p>Chocolate Chip Cone</p></a>
-      </div>
+      <a href="shop-item-chocochip.html">
+        <div id="choco-chip" class="shop-item-left group">
+          <img class="shop-circle" src="./img/ice-cream-1.png"><p>Chocolate Chip Cone</p>
+        </div>
+      </a>
       <div class="shop-item-right group">
         <a href=""><img class="circle" src=""><p>Item Name</p></a>
       </div>
