--- a/info.html
+++ b/info.html
@@ -20,10 +20,17 @@
     <link rel="stylesheet" href="css/RESET.css">
     <link rel="stylesheet" href="css/Master-Styles.css">
 
-    <!-- Scripts -->
+    <!-- JS -->
+    
+    <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="js/function.js"></script>
+      
+    <!-- Fonts -->
     <script>try{Typekit.load();}catch(e){}</script>
-     <script src="//use.typekit.net/dyy1prm.js"></script>
+    <script src="//use.typekit.net/dyy1prm.js"></script>
 
+    <!-- Scripts -->
 
   </head>
   <body>
