content wraps / updates to content

--- a/index.html
+++ b/index.html
@@ -70,17 +70,43 @@
     </div>
 
     <!-- Main Content -->
-    <div id="MC-item" class="group">
-      <div class="MC-item-img">
-        <img src="img/nightlight.jpg">
-      </div>
-      <div class="MC-item-post group">
-        <h4>Singing Out-Loud</h4>
-        <h3><a href="fromblack.html">From The Blackness</a></h3>
-        <p>Black Moods was coined from a period in my life.  Its is named for much the same a Black Hole is and in fact was meant to explain a very similar phenomenon<!--, the obscured knowledge of a vast infinity that conceals itself beyond sight, understanding or even general comprehension. The true meaning of why I came to exist in this blackness is so far gone that undoubtedly it has also become lost in its own depth. A depth that is still a part of who I am and will always be. The creation of this, however, is in celebration of what has now become due to the incubation within the blackness. Here now is a celebratory Black Mood. A Yellow Mood. A Cyan Mood. A Rainbow Mood.
-<br><br>
-My intention here is to voice all that was left in the dark, to blossom and express the fluid nature of mood. Black Moods will be a collection of love, loss, the found places and ideas that inspire and incubate for the future.--></p>
-      </div>
+    <div id="indexWrapper">
+        <div id="contentInner">
+            <div class="mc-item">
+              <div class="MC-item-img">
+                <img src="img/nightlight.jpg">
+              </div>
+              <div class="MC-item-post group">
+                <h4>Singing Out-Loud</h4>
+                <h3><a href="fromblack.html">From The Blackness</a></h3>
+                <p>Black Moods was coined from a period in my life.  Its is named for much the same a Black Hole is and in fact was meant to explain a very similar phenomenon<!--, the obscured knowledge of a vast infinity that conceals itself beyond sight, understanding or even general comprehension. The true meaning of why I came to exist in this blackness is so far gone that undoubtedly it has also become lost in its own depth. A depth that is still a part of who I am and will always be. The creation of this, however, is in celebration of what has now become due to the incubation within the blackness. Here now is a celebratory Black Mood. A Yellow Mood. A Cyan Mood. A Rainbow Mood.
+        <br><br>
+        My intention here is to voice all that was left in the dark, to blossom and express the fluid nature of mood. Black Moods will be a collection of love, loss, the found places and ideas that inspire and incubate for the future.--></p>
+              </div>
+            </div>
+            <div class="mc-item">
+                <div class="MC-item-img">
+                    <img src="img/snow_dog.jpg">
+                </div>
+                <div class="MC-item-post group">
+                    <h4>Free Love</h4>
+                    <h3><a href="shop-item-chocochip.html">Choc Chip Cone</a></h3>
+                    <p>This is part of an illustration series that is remembering the warmer days past, and wishing for more to come in the future. There are downloads for any device you use. Enjoy</p>
+                </div>
+            </div>
+<!--            
+            <div class="mc-item">
+                <div class="MC-item-img">
+                    <img src="">
+                </div>
+                <div class="MC-item-post group">
+                </div>
+                <h4></h4>
+                <h3><a href=""></a></h3>
+                <p></p>
+            </div>
+-->
+        </div>
     </div>
     
     <!-- SideBar-Right -->
