--- a/blog.html
+++ b/blog.html
@@ -92,21 +92,35 @@
     
     
     <!-- Main Content -->
-    <div id="Blog-feed">
-      <div class="feed-article">
-        <a class="imgHover" href="fromblack.html">
-            <div class="feedImg">
-                <img src="img/nightlight.jpg">
+    <div id="contentWrapper">
+        <div id="contentInner" class="blog-feed">
+          <div  id="Life" class="feed-article">
+            <a class="imgHover" href="fromblack.html">
+                <div class="feedImg">
+                    <img src="img/nightlight.jpg">
+                </div>
+            </a>
+            <div class="feedCopy">
+                <h4>Singing Out-Loud</h4>
+                <h3><a href="fromblack.html">From the Blackness</a></h3>
+                <p>Black Moods was coined from a period in my life.  Its is named for much the same a Black Hole is and in fact was meant to explain a very similar phenomenon<!--, the obscured knowledge of a vast infinity that conceals itself beyond sight, understanding or even general comprehension. The true meaning of why I came to exist in this blackness is so far gone that undoubtedly it has also become lost in its own depth. A depth that is still a part of who I am and will always be. The creation of this, however, is in celebration of what has now become due to the incubation within the blackness. Here now is a celebratory Black Mood. A Yellow Mood. A Cyan Mood. A Rainbow Mood.
+    <br><br>
+    My intention here is to voice all that was left in the dark, to blossom and express the fluid nature of mood. Black Moods will be a collection of love, loss, the found places and ideas that inspire and incubate for the future.--></p>
             </div>
-        </a>
-        <div id="Life" class="feedCopy">
-            <h4>Singing Out-Loud</h4>
-            <h3><a href="fromblack.html">From the Blackness</a></h3>
-            <p>Black Moods was coined from a period in my life.  Its is named for much the same a Black Hole is and in fact was meant to explain a very similar phenomenon<!--, the obscured knowledge of a vast infinity that conceals itself beyond sight, understanding or even general comprehension. The true meaning of why I came to exist in this blackness is so far gone that undoubtedly it has also become lost in its own depth. A depth that is still a part of who I am and will always be. The creation of this, however, is in celebration of what has now become due to the incubation within the blackness. Here now is a celebratory Black Mood. A Yellow Mood. A Cyan Mood. A Rainbow Mood.
-<br><br>
-My intention here is to voice all that was left in the dark, to blossom and express the fluid nature of mood. Black Moods will be a collection of love, loss, the found places and ideas that inspire and incubate for the future.--></p>
+          </div>
+          <div  id="Love" class="feed-article">
+            <a class="imgHover" href="fromblack.html">
+                <div class="feedImg">
+                    <img src="img/nightlight.jpg">
+                </div>
+            </a>
+            <div class="feedCopy">
+                <h4>Singing Out-Loud</h4>
+                <h3><a href="fromblack.html">From the Blackness</a></h3>
+                <p></p>
+            </div>
+          </div>
         </div>
-      </div>
     </div>
 
     <!-- Footer -->
