--- a/shop.html
+++ b/shop.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="css/IE.css">
     <link rel="stylesheet" href="css/RESET.css">
     <link rel="stylesheet" href="css/Master-Styles.css">
+    <link rel="stylesheet" href="css/shop.css">
 
     <!-- JS -->
     
@@ -71,18 +72,31 @@
     </div>
 
     <!-- MainContent -->
-    <div id="shop">
-      <a href="shop-item-chocochip.html">
-        <div id="choco-chip" class="shop-item-left group">
-          <img class="shop-circle" src="./img/ice-cream-1.png"><p>Chocolate Chip Cone</p>
+    <div id="contentWrapper">
+        <div id="contentInner">
+            <div class="shopFeed">
+                <ul>
+                  <li class="shop-item-left group">
+                    <a href="shop-item-chocochip.html">
+                        <div class="shop-circle choc-chip">
+                            <p>Chocolate Chip Cone</p>
+                        </div>
+                    </a>
+                  </li>
+                  <li class="shop-item-left group">
+                    <a href="shop-item-chocochip.html">
+                        <div class="shop-circle choc-chip">
+                            <p>Chocolate Chip Cone</p>
+                        </div>
+                    </a>
+                  </li>
+                </ul>
+            </div>
         </div>
-      </a>
-      <div class="shop-item-right group">
-        <a href=""><img class="circle" src=""><p>Item Name</p></a>
-      </div>
     </div>
 
     <!-- Footer -->
+
     <div id="Foot" class="group">
       <div class="foot-top">
         <div class="foot-page-links">
