--- a/work.html
+++ b/work.html
@@ -82,19 +82,25 @@
     </div>
 
     <!-- Main Content -->
-    <div id="Work">
-<ul>
-      <li><div id="" class="work-items">
-        <h4>Item</h4>
-        <a href=""><img src=""></a>
-        <p>Short description and other info that might be useful or not... Its up to you to get what you need.<a href="">See More</a></p>
-      </div></li>
-      <li><div id="" class="work-items">
-        <h4>Item</h4>
-        <a href=""><img src=""></a>
-        <p>Short description and other info that might be useful or not... Its up to you to get what you need.<a href="">See More</a></p>
-      </div></li>
-</ul>
+    <div id="contentWrapper">
+        <div id="contentInner" class="work-items">
+            <ul>
+              <li>
+                <div id="" class="work-items">
+                    <h4>Item</h4>
+                    <a href=""><img src=""></a>
+                    <p>Short description and other info that might be useful or not... Its up to you to get what you need.<a href="">See More</a></p>
+                </div>
+              </li>
+              <li>
+                  <div id="" class="work-items">
+                    <h4>Item</h4>
+                    <a href=""><img src=""></a>
+                    <p>Short description and other info that might be useful or not... Its up to you to get what you need.<a href="">See More</a></p>
+                  </div>
+              </li>
+            </ul>
+        </div>
     </div>
 
     <!-- Footer -->
