fixes and improvements

--- a/blog.html
+++ b/blog.html
@@ -94,7 +94,7 @@
     <!-- Main Content -->
     <div id="contentWrapper">
         <div id="contentInner" class="blog-feed">
-          <div  id="Life" class="feed-article">
+          <div  id="Life" class="feed-article group">
             <a class="imgHover" href="fromblack.html">
                 <div class="feedImg">
                     <img src="img/nightlight.jpg">
@@ -108,7 +108,7 @@
     My intention here is to voice all that was left in the dark, to blossom and express the fluid nature of mood. Black Moods will be a collection of love, loss, the found places and ideas that inspire and incubate for the future.--></p>
             </div>
           </div>
-          <div  id="Love" class="feed-article">
+          <div  id="Love" class="feed-article group">
             <a class="imgHover" href="fromblack.html">
                 <div class="feedImg">
                     <img src="img/nightlight.jpg">
