--- a/shop.html
+++ b/shop.html
@@ -32,6 +32,11 @@
     <script src="//use.typekit.net/dyy1prm.js"></script>
 
     <!-- Scripts -->
+      <script type="text/javascript">
+        $(document).ready(function() {
+            $ ('div.shopFeed li:odd').addClass ('shopFeedOdd');
+        });
+      </script>
 
   </head>
   <body>
