Continued..  graphic work next

--- a/shop-item.html
+++ b/shop-item.html
@@ -103,9 +103,9 @@
       <div class="foot-bottom">
         <div class="foot-social">
           <ul>
-            <li><a href="">GitHub</a></li>
-            <li><a href="">LinkdIn</a></li>
-            <li><a href="">Instagram</a></li>
+            <li><a target="_blank" href="https://github.com/colorcraft">GitHub</a></li>
+            <li><a target="_blank" href="http://www.linkedin.com/pub/joseph-taylor/53/165/673/ ">LinkdIn</a></li>
+            <li><a target="_blank"  href="http://instagram.com/c0lorcraft">Instagram</a></li>
           </ul>
           <p><a href=""></a></p>
         </div>
