--- a/info.html
+++ b/info.html
@@ -52,7 +52,7 @@
           <li><a href="work.html">Work</a></li>
           <li><a href="blog.html">Blog</a></li>
           <li><a href="shop.html">Shop</a></li>
-          <li><a href="info.html">Info</a></li>
+          <li><a class="active" href="info.html">Info</a></li>
         </ul>
       </div>
     </div>
