--- a/shop.html
+++ b/shop.html
@@ -57,7 +57,7 @@
         <ul id="menu">
           <li><a href="work.html">Work</a></li>
           <li><a href="blog.html">Blog</a></li>
-          <li><a href="shop.html">Shop</a></li>
+          <li><a class="active" href="shop.html">Shop</a></li>
           <li><a href="info.html">Info</a></li>
         </ul>
       </div>
@@ -123,11 +123,10 @@
       <div class="foot-bottom">
         <div class="foot-social">
           <ul>
-            <li><a href="">GitHub</a></li>
-            <li><a href="">LinkdIn</a></li>
-            <li><a href="">Instagram</a></li>
+            <li><a target="_blank" href="https://github.com/colorcraft">GitHub</a></li>
+            <li><a target="_blank" href="http://www.linkedin.com/pub/joseph-taylor/53/165/673/ ">LinkdIn</a></li>
+            <li><a target="_blank"  href="http://instagram.com/c0lorcraft">Instagram</a></li>
           </ul>
-          <p><a href=""></a></p>
         </div>
         <div class="foot-rights">
           <h4>C. 2014 Black-Moods.com</h4>
@@ -139,6 +138,10 @@
         </div>
       </div>
     </div>
+<script type="text/javascript">
+    
 
+    
+</script>
   </body>
 </html>
