--- a/work.html
+++ b/work.html
@@ -49,7 +49,7 @@
         </label>
         <input id="show-menu" type="checkbox" role="button"></input>
         <ul id="menu">
-          <li><a href="work.html">Work</a></li>
+          <li><a class="active" href="work.html">Work</a></li>
           <li><a href="blog.html">Blog</a></li>
           <li><a href="shop.html">Shop</a></li>
           <li><a href="info.html">Info</a></li>
@@ -125,9 +125,9 @@
       <div class="foot-bottom">
         <div class="foot-social">
           <ul>
-            <li><a href="">GitHub</a></li>
-            <li><a href="">LinkdIn</a></li>
-            <li><a href="">Instagram</a></li>
+            <li><a target="_blank" href="https://github.com/colorcraft">GitHub</a></li>
+            <li><a target="_blank" href="http://www.linkedin.com/pub/joseph-taylor/53/165/673/ ">LinkdIn</a></li>
+            <li><a target="_blank"  href="http://instagram.com/c0lorcraft">Instagram</a></li>
           </ul>
           <p><a href=""></a></p>
         </div>
