added img and pages

--- a/fromblack.html
+++ b/fromblack.html
@@ -50,7 +50,7 @@
         <input id="show-menu" type="checkbox" role="button"></input>
         <ul id="menu">
           <li><a href="work.html">Work</a></li>
-          <li><a href="blog.html">Blog</a></li>
+          <li><a class="active" href="blog.html">Blog</a></li>
           <li><a href="shop.html">Shop</a></li>
           <li><a href="info.html">Info</a></li>
         </ul>
