--- a/shop-item-chocochip.html
+++ b/shop-item-chocochip.html
@@ -51,7 +51,7 @@
         <ul id="menu">
           <li><a href="work.html">Work</a></li>
           <li><a href="blog.html">Blog</a></li>
-          <li><a href="shop.html">Shop</a></li>
+          <li><a class="active" href="shop.html">Shop</a></li>
           <li><a href="info.html">Info</a></li>
         </ul>
       </div>
@@ -73,12 +73,14 @@
                     <div class="back-btn">
                         <a href="shop.html">&lt;</a>
                     </div>
-                    <img class="circle-2" src="./img/ice-cream-1.png">
+                    <img class="circle-2" src="img/chip-cone-lrg.png">
                     <div class="item-specs">
                         <h2><em>Mint Choc Chip<br><span>Screen Wallpaper</span></em></h2>
-                        <p><br>Find you fit<br><span>For Screens &amp; Size</span></p>
+                        <p><br>Find your fit<br><span>For Screens &amp; Size</span></p>
                         <p class="item-price">$free.99</p>
-
+                        <div class="dwnldBtn">
+                            <a href="downloads.html"><p>download</p></a>
+                        </div>
                     </div>
                 </div>
             </div>
