--- a/shop.html
+++ b/shop.html
@@ -89,9 +89,16 @@
                     </a>
                   </li>
                   <li class="shop-item-left group">
-                    <a href="shop-item-chocochip.html">
-                        <div class="shop-circle choc-chip">
-                            <p>Chocolate Chip Cone</p>
+                    <a href="shop-item-creamcicle.html">
+                        <div class="shop-circle cream-cicle">
+                            <p>CreamCicle</p>
+                        </div>
+                    </a>
+                  </li>
+                    <li class="shop-item-left group">
+                    <a href="shop-item-diane.html">
+                        <div class="shop-circle diane">
+                            <p>'Diane'</p>
                         </div>
                     </a>
                   </li>
