Anchorage Copy Update

--- a/index.html
+++ b/index.html
@@ -308,16 +308,16 @@
 </div>
 <div class="element clearfix col1-3 grey auto anchor">
 <h4><strong>Challenge</strong></h4>
-<p>Lorem ipsum dolor ipsum dolor ipsum dolor ipsum dolor ipsum dolor Lorem ipsum dolor ipsum dolor ipsum dolor ipsum dolor ipsum dolor Lorem ipsum dolor ipsum dolor ipsum dolor ipsum dolor ipsum dolor Lorem ipsum dolor ipsum dolor ipsum dolor ipsum dolor ipsum dolor Lorem ipsum dolor ipsum dolor ipsum dolor ipsum dolor ipsum dolor</p>
+<p>To develop a website and logo for a client that was renovating an historic landmark. Anchorage 1770 is a Botique B&amp;B who also needed booking widgets, google map implementation and gift certificate shopping cart.</p>
 </div>
 <div class="element clearfix col1-3 grey auto anchor">
 <h4><strong>Solution</strong></h4>
-<p>Lorem ipsum dolor ipsum dolor ipsum dolor ipsum dolor ipsum dolor Lorem ipsum dolor ipsum dolor ipsum dolor ipsum dolor ipsum dolor Lorem ipsum dolor ipsum dolor ipsum dolor ipsum dolor ipsum dolor Lorem ipsum dolor ipsum</p>
+<p>For an establishment as old and historied as The Anchorage it was essential to stay true to it's roots while not being lost in the past. The overall direction of the project was focused the locality of Beaufort and the property's history.</p>
 
 </div>
 <div class="element clearfix col1-3 grey auto anchor">
 <h4><strong>Result</strong></h4>
-<p>Lorem ipsum dolor ipsum dolor ipsum dolor ipsum dolor ipsum dolor Lorem ipsum dolor ipsum dolor ipsum dolor ipsum dolor ipsum dolor Lorem ipsum dolor ipsum dolor ipsum dolor ipsum dolor ipsum dolor Lorem ipsum dolor ipsum dolor ipsum dolor ipsum dolor ipsum dolor Lorem ipsum dolor ipsum dolor ipsum dolor ipsum dolor ipsum dolor</p>
+<p>The overall success was reached through implementation of some very exciting customized content-managed mapping and the creation of a new Identity. The "Anchor" mark is a more than well known icon and carries great meaning in many circles. I believe that it is successful in not being overused while remaining classical and elegant.</p>
 </div>
 <div class="element  clearfix col1-3 grey auto anchor">
 <div class="icon-holder quote"></div>
