--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <title>J. Taylor | Visual Designer</title>
 <!-- Set the viewport width to device width for mobile -->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-<meta name="author" content="ppandp">
+<meta name="author" content="Joseph Taylor">
 <meta name="Description" content="Joseph Taylor | Web Developer | Visual Designer" />    
 <!-- Favicon -->
-<link rel="shortcut icon" href="img/favicon.ico">
+<link rel="shortcut icon" href="favicon.ico">
 <link href="css/reset.css" rel="stylesheet" type="text/css" media="screen" />
 <link href="css/styles.css" rel="stylesheet" type="text/css" media="screen" />
 <link href="css/jquery.fancybox.css" rel="stylesheet" type="text/css" media="screen" />
