Main String Copy
added

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
               <h5>The Process</h5>
               <ol>
                 <li><strong>Communication:</strong><br />
-                  Every good design starts with an understanding of clients needs, and then building a solution to communicate th
+                  Every good design starts with an understanding of clients needs, and then building a solution to communicate them.
                 <li><strong>Strategy:</strong><br />
                   Knowing where to aim gives us a better odds at reaching the target audience.</li>
                 <li><strong>Blood and Sweat:</strong><br />
@@ -484,16 +484,15 @@
 </div>
 <div class="element clearfix col1-3 grey auto maine">
 <h4><strong>Challenge</strong></h4>
-<p>Being an international label originating in Japan required a design that was dynamic enough to be available in multiple languages.</p>
+<p>Home-made Etsy-ish Knitware shop needed new logo and packaging. Something fresh and modern, while remaining true to what Mainers are.</p>
 </div>
 <div class="element clearfix col1-3 grey auto maine">
 <h4><strong>Solution</strong></h4>
-<p>The Issue was designed as an end of year annual and lookbook. This gave some additional direction when developing a color scheme and graphic identity. Using cartographics in a subdued manner reinforced both the rigidity and strenght of Mountains and the grid employed in the layout.</p>
-
+<p>It's far too easy to directly enumerate a part of a clients brand name. So the effort was to do all we could to not use the state as part of the logo. We also wanted to create a feeling of an eco-friendly company whose product and packaging could be handmade.</p>
 </div>
 <div class="element clearfix col1-3 grey auto maine">
 <h4><strong>Result</strong></h4>
-<p>This was a pet project for me, one that combined my love of layout design with my equally great admiration and appreciation of fashion. White Mountaineering is one of the worlds leading brands.</p>
+<p>By distilling iconography from the knitting process into very flat graphics and utilizing a subtle color scheme, we came upon a final product that would be dynamic to future product types and was easy enough to print at home in various manners.</p>
 </div>
 <div class="element  clearfix col1-3 maine"> <a href="#platinum" title="">
 <figure class="images"> <img src="images/platinum/plat-thumb.jpg" alt="Next<span>Platinum Abq</span><i>→</i>" class="slip" /> </figure>
