Nav Ajax Function Fix

--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
     <div id="menu-close-button">&times;</div>
     <ul id="options" class="option-set clearfix" data-option-key="filter">
       <li class="selected"> <a href="#home">Home</a> </li>
-      <li> <a href="#about">Profile</a> </li>
-      <li> <a href="#portfolio">Portfolio</a> </li>
-      <li> <a href="#skills">Skills</a> </li>
-      <li> <a href="#pricing">Pricing</a> </li>
-      <li> <a href="#contact">Contact</a> </li>
+      <li> <a class="folioLink" href="#about">Profile</a> </li>
+      <li> <a class="folioLink" href="#portfolio">Portfolio</a> </li>
+      <li> <a class="folioLink" href="#skills">Skills</a> </li>
+      <li> <a class="folioLink" href="#pricing">Pricing</a> </li>
+      <li> <a class="folioLink" href="#contact">Contact</a> </li>
     </ul>
     <div class="social-links">
       <ul class="social-list clearfix">
