update copy on apparal page

--- a/index.html
+++ b/index.html
@@ -666,8 +666,8 @@
 </div>
 </div>
 <div class="element clearfix col1-3 grey auto tees">
-<h4><strong>Result</strong></h4>
-<p>If done well, a logo will tell the story of your company. It will have the ability to stand alone and represent all aspects of your business.</p>
+<h4><strong>Purchasing</strong></h4>
+<p>If you see something here that might just be your size. Let me know and we may be able to work somthing out. That goes for any of the art prints or tees.</p>
 </div>
 <div class="element  clearfix col1-3 grey auto tees">
 <div class="icon-holder quote"></div>
