--- a/uncompressed.html
+++ b/uncompressed.html
@@ -90,7 +90,7 @@
             </div>
             <div class="element clearfix col2-3 about white grid-fit">
               <p class="small">Strive to learn</p>
-              <h2>I find myself going the extra mile to <strong>always</strong> be learning new technologies, methodologies and ways to reach design <strong>solutions</strong>.</h2>
+                <h2>I find myself going the <strong>extra</strong> mile to <strong>always</strong> be learning new tech, new methods and new ways to reach complete design <strong>solutions</strong>.</h2>
             </div>  
             <div class="element clearfix col1-3 portfolio"> <a class="folioLink" href="#anchor" title="Anchorage 1770">
               <figure class="images"> <img src="images/anchorage/thumbs.jpg" alt="<span>Anchorage 1770</span><i>→</i>" class="slip" /> </figure>
