--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               </a>
             </div>
             <div class="element clearfix col1-3 about home hybrid offWhite">
-              <div class="images"> <img src="images/about02.jpg" alt="John Doe" /> </div>
+              <figure class="images"> <img src="images/about02.jpg" srcset="images/about02.jpg 1x, images/about02-lrg.jpg 1.5x" alt="Joseph Taylor" /> </figure>
               <div class="elem-content">
                 <p class="small">Design Focused</p>
                 <h3 class="">Joseph Taylor</h3>
@@ -371,7 +371,7 @@ Design Services</p>
 </ul>
 </div>
 <div class="ft-part student">
-<p class="small">Student Work</p>
+<p class="small">Sample Work</p>
 </div>
 </div>
 <div class="element clearfix col1-3 grey auto whtmtn">
@@ -699,7 +699,7 @@ Design Services</p>
 </ul>
 </div>
 <div class="ft-part student">
-<p class="small">Student Work</p>
+<p class="small">Sample Work</p>
 </div>
 </div>
 <div class="element clearfix col1-3 grey auto pad">
