--- a/index.html
+++ b/index.html
@@ -166,10 +166,11 @@
             <div class="element clearfix col1-3 portfolio"> <a class="folioLink" href="#whtmtn" title="White Mountaineering">
                   <picture class="images"> <img src="images/whtmtn/thumbs.jpg" srcset="images/whtmtn/thumbs.jpg 1x, images/whtmtn/thumbs@2x.jpg 1.5x" alt="<span>White Mountaineering</span><i>→</i>" class="slip" /> </picture> </a>
             </div><!--WhiteMount-->
-            <div class="element  clearfix col1-3 portfolio"> <a class="folioLink" href="#deer" title="">
-              <picture class="images"> <img src="images/deerbrooke/thumbs.jpg" srcset="images/deerbrooke/thumbs.jpg 1x, images/deerbrooke/thumbs@2x.jpg 1.5x" alt="<span>Art Direction</span><i>→</i>" class="slip" /> </picture>
-              </a>
-            </div><!--Deerbrooke-->
+            <div class="element clearfix col1-3 portfolio">
+                <a class="folioLink" href="https://www.anchorage1770.com" target="_blank" title="Anchorage 1770">
+                    <picture class="images"> <img src="images/anchorage/thumbs.jpg" srcset="images/anchorage/thumbs.jpg 1x, images/anchorage/thumbs@2x.jpg 1.5x" alt="<span>Anchorage 1770<br></>Visit Site</span><i>→</i>" class="slip" /> </picture>
+                </a>
+            </div><!--Anchorage-->
             <div class="element clearfix col2-3 auto portfolio">
                 <picture class="images">
                     <img src="images/ill/items2.jpg" srcset="images/ill/items2.jpg 1x, images/ill/items2.jpg 1.5x" alt="<span>Getting Ill</span><i>→</i>" class="" />
@@ -178,16 +179,17 @@
             <div class="element clearfix col1-3 portfolio"> <a class="folioLink" href="#bjs" title="BJ's Wholesale">
                   <picture class="images"> <img src="images/bjs/thumbs.jpg" srcset="images/bjs/thumbs.jpg 1x, images/bjs/thumbs@2x.jpg 1.5x" alt="<span>BJ's Wholesale</span><i>→</i>" class="slip" /> </picture> </a>
             </div><!--BJS-->
-            <div class="element clearfix col1-3 portfolio">
-                <a class="folioLink" href="https://www.anchorage1770.com" target="_blank" title="Anchorage 1770">
-                    <picture class="images"> <img src="images/anchorage/thumbs.jpg" srcset="images/anchorage/thumbs.jpg 1x, images/anchorage/thumbs@2x.jpg 1.5x" alt="<span>Anchorage 1770<br></>Visit Site</span><i>→</i>" class="slip" /> </picture>
-                </a>
-            </div><!--Anchorage-->
             <div class="element  clearfix col1-3 portfolio">
-                <a class="folioLink" href="https://www.12oaksnc.com" target="_blank" title="12Oaks North Carolina">
-                    <picture class="images"> <img src="images/oaks/thumbs.jpg" srcset="images/oaks/thumbs.jpg 1x, images/oaks/thumbs@2x.jpg 1.5x" alt="<span>12 Oaks<br></>Visit Site</span><i>→</i>" class="slip linkto" /> </picture>
-                </a>
-            </div><!--12 Oaks-->
+                <a class="folioLink" href="#logo" title="">
+                    <picture class="images"> <img src="images/branding/thumb.jpg" srcset="images/branding/thumb.jpg 1x, images/branding/thumbs@2x.jpg 1.5x" alt="<span>Logo Designs</span><i>→</i>" class="slip" /> </picture>
+                </a> 
+            </div><!--Logos-->
+            <div class="element  clearfix col1-3 portfolio">
+                <a class="folioLink" href="#book" title="">
+                    <picture class="images"> <img src="images/book/thumbs.jpg" srcset="images/book/thumbs.jpg 1x, images/book/thumbs@2x.jpg 1.5x" alt="<span>Book Design</span><i>→</i>" class="slip" /> </picture>
+                </a> 
+            </div><!--Book-->
+            
             <div class="element clearfix col2-3 auto portfolio">
                 <picture class="images">
                     <img src="images/ill/items5.jpg" srcset="images/ill/items5.jpg 1x, images/ill/items5.jpg 1.5x" alt="<span>Getting Ill</span><i>→</i>" class="" />
@@ -196,18 +198,15 @@
             <div class="element  clearfix col1-3 portfolio"> <a class="folioLink" href="#vans" title="Vans">
               <picture class="images"> <img src="images/vans/thumbs.jpg" srcset="images/vans/thumbs.jpg 1x, images/vans/thumbs-lrg.jpg 1.5x" alt="<span>Off The Wall!</span><i>→</i>" class="slip" /> </picture> </a>
             </div><!--VANS-->
-            <div class="element clearfix col1-3 portfolio">
-                <picture class="images">
-                    <img src="images/ill/thumbs.jpg" srcset="images/ill/thumbs.jpg 1x, images/ill/thumbs.jpg 1.5x" alt="<span>Getting Ill</span><i>→</i>" class="slip screen" />
-                </picture>
-            </div><!--GracePhoto-->
-            <div class="element  clearfix col1-3 portfolio">
-                <a class="folioLink" href="#logo" title="">
-                    <picture class="images"> <img src="images/branding/thumb.jpg" srcset="images/branding/thumb.jpg 1x, images/branding/thumbs@2x.jpg 1.5x" alt="<span>Logo Designs</span><i>→</i>" class="slip" /> </picture>
-                </a> 
-            </div><!--Logos-->
+            <div class="element  clearfix col1-3 portfolio"> <a class="folioLink" href="#maine" title="The Maine String">
+              <picture class="images"> <img src="images/tms/thumbs.jpg" srcset="images/tms/thumbs.jpg 1x, images/tms/thumbs-lrg.jpg 1.5x" alt="<span>The Maine String</span><i>→</i>" class="slip" /> </picture> </a>
+            </div><!--MaineString-->
+            <div class="element  clearfix col1-3 portfolio"> <a class="folioLink" href="#deer" title="">
+              <picture class="images"> <img src="images/deerbrooke/thumbs.jpg" srcset="images/deerbrooke/thumbs.jpg 1x, images/deerbrooke/thumbs@2x.jpg 1.5x" alt="<span>Art Direction</span><i>→</i>" class="slip" /> </picture>
+              </a>
+            </div><!--Deerbrooke-->
             <div class="element  clearfix col1-3 portfolio"> <a class="folioLink" href="#tees" title="">
-              <picture class="images"> <img src="images/tee/thumbs.jpg" srcset="images/tee/thumbs.jpg 1x, images/tee/thumbs@2x.jpg 1.5x" alt="<span>Apparel Design</span><i>→</i>" class="slip" /> </picture>
+              <picture class="images"> <img src="images/tee/thumbs.jpg" srcset="images/tee/thumbs.jpg 1x, images/tee/thumbs@2x.jpg 1.5x" alt="<span>Teeeeees</span><i>→</i>" class="slip" /> </picture>
               </a>
             </div><!--Tees-->
             <div class="element  clearfix col1-3 portfolio">
@@ -215,9 +214,21 @@
                     <picture class="images"> <img src="images/platinum/thumbs.jpg" srcset="images/platinum/thumbs.jpg 1x, images/platinum/thumbs@2x.jpg 1.5x" alt="<span>Platinum ABQ<br></>Visit Site</span><i>→</i>" class="slip" /> </picture>
                 </a>
             </div><!--Platinum-->
-            <div class="element  clearfix col1-3 portfolio"> <a class="folioLink" href="#maine" title="The Maine String">
-              <picture class="images"> <img src="images/tms/thumbs.jpg" srcset="images/tms/thumbs.jpg 1x, images/tms/thumbs-lrg.jpg 1.5x" alt="<span>The Maine String</span><i>→</i>" class="slip" /> </picture> </a>
-            </div><!--MaineString--> 
+            <div class="element clearfix col1-3 portfolio">
+                <picture class="images">
+                    <img src="images/ill/thumbs.jpg" srcset="images/ill/thumbs.jpg 1x, images/ill/thumbs.jpg 1.5x" alt="<span>Getting Ill</span><i>→</i>" class="slip screen" />
+                </picture>
+            </div><!--GracePhoto-->
+            <div class="element  clearfix col2-3 auto portfolio">
+                <a class="folioLink" href="" title="MAss Art Poster">
+                    <picture class="images"> <img src="images/posters/items1.jpg" srcset="images/posters/items1.jpg 1x, images/posters/items1.jpg 1.5x" alt="<span>MAss Art</span><i>→</i>" class="slip linkto" /> </picture>
+                </a>
+            </div><!--MAssArt-->
+            <div class="element  clearfix col1-3 portfolio">
+                <a class="folioLink" href="https://www.12oaksnc.com" target="_blank" title="12Oaks North Carolina">
+                    <picture class="images"> <img src="images/oaks/thumbs.jpg" srcset="images/oaks/thumbs.jpg 1x, images/oaks/thumbs@2x.jpg 1.5x" alt="<span>12 Oaks<br></>Visit Site</span><i>→</i>" class="slip linkto" /> </picture>
+                </a>
+            </div><!--12 Oaks-->
 <!-- End Portfolio Thumbs -->            
               
  <!--  White Mountaineering Folio Item -->
@@ -543,13 +554,8 @@
     <h4><strong>Interaction</strong></h4>
     <p>Digital publication is more than just page layout, it's dynamic, interactive, exciting, and when done well the user wants to learn and engage with more of the publishers content.</p>
 </div>
-<div class="element clearfix col1-3 grey back-button pad">
-    <a class="folioLink" href="#portfolio" title="" class="whole-tile">
-        <h5>Back to Portfolio<span class="arrow">→</span></h5>
-    </a>
-</div>
 <!-- End Folio Item -->
-        <div class="element clearfix col1-3 grey back-button anchor logo tees platinum maine oaks home whtmtn bjs vans deer">
+        <div class="element clearfix col1-3 grey back-button anchor logo tees platinum maine oaks home whtmtn bjs vans deer pad">
             <a class="folioLink" href="#portfolio" title="" class="whole-tile">
                 <h5>Back to Portfolio<span class="arrow">→</span></h5>
             </a>
